--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,31 +5,30 @@
 version: 2.1
 
 executors:
-  conda-publisher:
-    environment:
-      BUILD_PATH: /home/circleci/conda/envs/conda-build/conda-bld/linux-64/
-#      BUILD_PATH: /home/circleci/conda/envs/conda-build/conda-bld/linux-64/pydynamic*.tar.bz2
+  tester:
     docker:
       - image: circleci/python:3
+  conda-publisher:
+    docker:
+      - image: circleci/buildpack-deps:disco
 
 workflows:
   build_environments:
     jobs:
 #      - build_venv_env
-      - build_conda_env
-#      - deploy_conda_env:
-#          context: Anaconda Cloud Met4FoF
-#          requires:
-#            - build_conda_env
-#  build_and_test_code:
+      - build_and_test_conda_env
+      - deploy_conda_env:
+          context: Anaconda Cloud Met4FoF
+          requires:
+            - build_and_test_conda_env
+#  test_submodules:
 #    jobs:
-#      - build_and_test_PyDynamic
-#      - build_and_test_agentMET4FOF
+#      - test_PyDynamic
+#      - test_agentMET4FOF
 
 jobs:
-  build_conda_env:
-    docker:
-      - image: circleci/python:3
+  build_and_test_conda_env:
+    executor: tester
 
     working_directory: ~/repo
 
@@ -146,14 +145,6 @@ jobs:
           key: >-
             conda-build-dependencies
 
-#      # Test package.
-#      - run:
-#          name: Test package
-#          command: |
-#            conda create -n test_pydynamic
-#            conda install $BUILD_PATH
-##            conda create -n test_pydynamic -c file://$BUILD_PATH pydynamic
-
       # Deploy package.
       - run:
           name: Deploy package
@@ -161,24 +152,6 @@ jobs:
             source activate conda-build
             anaconda -t $CONDA_PASS upload --no-register --user CONDA_USER \
             $BUILD_PATH
-
-
-#      # Checkout code.
-#      - checkout
-#
-#      # Deploy conda environment.
-#      - run:
-#          name: Deploy Anaconda environment
-#          command: |
-#            echo $CONDA_PASS | anaconda login \
-#              --username $DOCKER_USER --password-stdin
-#
-#            docker push $DOCKER_USER/$IMAGE_NAME:$TAG
-#            wget "https://repo.anaconda.com/miniconda/\
-#            Miniconda3-latest-Linux-x86_64.sh" -O /home/circleci/miniconda.sh
-#            mkdir -p /home/circleci/.conda
-#            bash /home/circleci/miniconda.sh -b -p /home/circleci/conda
-#            echo 'export PATH=/home/circleci/conda/bin:$PATH' >> $BASH_ENV
 
   build_venv_env:
     docker:
@@ -245,9 +218,8 @@ jobs:
       - store_test_results:
           path: test-reports
 
-  build_and_test_PyDynamic:
-    docker:
-      - image: circleci/python:3
+  test_PyDynamic:
+    executor: tester
 
     working_directory: ~/repo
 
@@ -305,9 +277,8 @@ jobs:
       - store_test_results:
           path: test-reports
 
-  build_and_test_agentMET4FOF:
-    docker:
-      - image: circleci/python:3
+  test_agentMET4FOF:
+    executor: tester
 
     working_directory: ~/repo
 
