--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,11 @@ workflows:
   build_environments:
     jobs:
 #      - build_venv_env
-#      - build_and_test_conda_env
+      - build_and_test_conda_env
       - deploy_conda_env:
           context: Anaconda Cloud Met4FoF
-#          requires:
-#            - build_and_test_conda_env
+          requires:
+            - build_and_test_conda_env
 #  test_submodules:
 #    jobs:
 #      - test_PyDynamic
