Upload environment to Anaconda Cloud in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,22 +114,10 @@ jobs:
   deploy_conda_env:
     executor: conda-publisher
 
-    working_directory: ~/repo
-
     steps:
       # Attach workflow workspace to retrieve saved image.
       - attach_workspace:
           at: /tmp/workspace
-
-#      # Install Miniconda.
-#      - run:
-#          name: Install Miniconda
-#          command: |
-#            wget "https://repo.anaconda.com/miniconda/\
-#            Miniconda3-latest-Linux-x86_64.sh" -O /home/circleci/miniconda.sh
-#            mkdir -p /home/circleci/.conda
-#            bash /home/circleci/miniconda.sh -b -p /home/circleci/conda
-#            echo 'export PATH=/home/circleci/conda/bin:$PATH' >> $BASH_ENV
 
       # Install Anaconda client.
       - run:
@@ -140,7 +128,7 @@ jobs:
       - run:
           name: Deploy package
           command: |
-            anaconda -t $CONDA_PASS upload --no-register --user $CONDA_USER \
+            anaconda -t $CONDA_PASS upload --user $CONDA_USER \
             /tmp/workspace/Met4FoF_Code-environment.yml
 
   build_venv_env:
