--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-# Python CircleCI 2.1 configuration file
+# CircleCI 2.1 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
@@ -15,16 +15,16 @@ executors:
 workflows:
   build_environments:
     jobs:
-#      - build_venv_env
+      - build_venv_env
       - build_and_test_conda_env
       - deploy_conda_env:
           context: Anaconda Cloud Met4FoF
           requires:
             - build_and_test_conda_env
-#  test_submodules:
-#    jobs:
-#      - test_PyDynamic
-#      - test_agentMET4FOF
+  test_submodules:
+    jobs:
+      - test_PyDynamic
+      - test_agentMET4FOF
 
 jobs:
   build_and_test_conda_env:
