--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ executors:
 workflows:
   build_environments:
     jobs:
-      - build_venv_env
+      - build_and_test_venv_env
       - build_and_test_conda_env
       - deploy_conda_env:
           context: Anaconda Cloud Met4FoF
@@ -130,7 +130,7 @@ jobs:
             anaconda -t $CONDA_PASS upload --user $CONDA_USER \
             /tmp/workspace/environment.yml
 
-  build_venv_env:
+  build_and_test_venv_env:
     docker:
       - image: circleci/python:3
 
