--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,8 @@ jobs:
             --deselect agentMET4FOF/tests/test_examples.py::TestZEMA_EMC \
             --deselect \
             agentMET4FOF/tests/test_zema_emc_ml.py::test_zema_emc_lda_agents \
+            --deselect \
+            agentMET4FOF/tests/test_memory_monitor_agent.py::test_simpleAgent \
             agentMET4FOF/ > test-reports/agentMET4FOF.log
 
       #            --ignore=agentMET4FOF/tests/test_zema_emc_ml.py \
