--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,15 +81,13 @@ jobs:
           name: Run tests
           command: |
             source activate Met4FoF_Code
-            pytest -v --junitxml=test-reports/PyDynamic.xml \
-            PyDynamic/ > test-reports/PyDynamic.log
-            pytest -v --junitxml=test-reports/agentMET4FOF.xml \
+            pytest -v --junitxml=test-reports/pytest.xml \
             --deselect agentMET4FOF/tests/test_examples.py::TestZEMA_EMC \
             --deselect \
             agentMET4FOF/tests/test_zema_emc_ml.py::test_zema_emc_lda_agents \
             --deselect \
-            agentMET4FOF/tests/test_zema_emc_ml.py::test_zema_emc_lda
-            agentMET4FOF/ > test-reports/agentMET4FOF.log
+            agentMET4FOF/tests/test_zema_emc_ml.py::test_zema_emc_lda \
+            > test-reports/pytest.log
 
       #            --ignore=agentMET4FOF/tests/test_zema_emc_ml.py \
       # Store test results.
