--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,9 +124,9 @@ jobs:
       - restore_cache:
           keys:
             # Specify the unique identifier for the cache.
-            - vvenv-dependencies-{{ checksum "requirements.txt" }}
+            - venv-dependencies-{{ checksum "requirements.txt" }}
             # Fallback to using the latest cache if no exact match is found.
-            - vvenv-dependencies-
+            - venv-dependencies-
 
       # Install dependencies.
       - run:
@@ -141,20 +141,18 @@ jobs:
           paths:
             - ./venv
           key: >-
-            vvenv-dependencies-{{ checksum "requirements.txt" }}
+            venv-dependencies-{{ checksum "requirements.txt" }}
 
       # Run tests! We use pytest's test-runner.
       - run:
           name: Run tests
           command: |
             . venv/bin/activate
-            pytest -v --junitxml=test-reports/PyDynamic.xml \
-            PyDynamic/ > test-reports/PyDynamic.log
-            pytest -v --junitxml=test-reports/agentMET4FOF.xml \
+            pytest -v --junitxml=test-reports/pytest.xml \
             --deselect agentMET4FOF/tests/test_examples.py::TestZEMA_EMC \
             --deselect \
             agentMET4FOF/tests/test_zema_emc_ml.py::test_zema_emc_lda_agents \
-            agentMET4FOF/ > test-reports/agentMET4FOF.log
+            > test-reports/pytest.log
 
       #            --ignore=agentMET4FOF/tests/test_zema_emc_ml.py \
       # Store test results.
