--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,8 @@ jobs:
       - restore_cache:
           keys:
             # Specify the unique identifier for the cache.
-            - venv-dependencies-{{ checksum "requirements.txt" }}
+            - venv-dependencies-{{ checksum "PyDynamic/requirements.txt" }}
+              {{ checksum "agentMET4FOF/requirements.txt" }}
             # Fallback to using the latest cache if no exact match is found.
             - venv-dependencies-
 
@@ -141,7 +142,8 @@ jobs:
           paths:
             - ./venv
           key: >-
-            venv-dependencies-{{ checksum "requirements.txt" }}
+            venv-dependencies-{{ checksum "PyDynamic/requirements.txt" }}
+            {{ checksum "agentMET4FOF/requirements.txt" }}
 
       # Run tests! We use pytest's test-runner.
       - run:
@@ -184,8 +186,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            # Specify the unique identifier for the cache in a multiline string,
-            # where the second line will be separated by a space from the first.
+            # Specify the unique identifier for the cache.
             - v1-dependencies-{{ checksum "PyDynamic/requirements.txt" }}
             # Fallback to using the latest cache if no exact match is found.
             - v1-dependencies-
@@ -243,8 +244,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            # Specify the unique identifier for the cache in a multiline string,
-            # where the second line will be separated by a space from the first.
+            # Specify the unique identifier for the cache.
             - v1-dependencies-{{ checksum "agentMET4FOF/requirements.txt" }}
             # Fallback to using the latest cache if no exact match is found.
             - v1-dependencies-
