--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ version: 2.1
 executors:
   tester:
     docker:
-      - image: circleci/python:3
+      - image: circleci/python:3.7
 
 workflows:
   build_and_test_virtual_environments:
@@ -134,7 +134,7 @@ jobs:
           name: Install dependencies
           command: |
             python3 -m venv venv
-            . venv/bin/activate
+            source venv/bin/activate
             pip install -r requirements.txt
             pip install pytest
 
@@ -149,7 +149,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            . venv/bin/activate
+            source venv/bin/activate
             pytest -v --junitxml=test-reports/pytest.xml \
             --deselect agentMET4FOF/tests/test_examples.py::TestZEMA_EMC \
             --deselect \
@@ -196,7 +196,7 @@ jobs:
           name: Install dependencies
           command: |
             python3 -m venv venv
-            . venv/bin/activate
+            source venv/bin/activate
             pip install -r PyDynamic/requirements.txt
             pip install pytest pytest-cov
 
@@ -210,7 +210,7 @@ jobs:
       - run:
           name: Run PyDynamic tests
           command: |
-            . venv/bin/activate
+            source venv/bin/activate
             pytest -v --junitxml=test-reports/pytest.xml \
             --cov-config=PyDynamic/.coveragerc --cov=PyDynamic/ \
             PyDynamic/ > test-reports/PyDynamic.log
@@ -254,7 +254,7 @@ jobs:
          name: Install dependencies
          command: |
            python3 -m venv venv
-           . venv/bin/activate
+           source venv/bin/activate
            pip install -r agentMET4FOF/requirements.txt
            pip install pytest pytest-cov
 
@@ -268,7 +268,7 @@ jobs:
       - run:
           name: Run agentMET4FOF tests
           command: |
-            . venv/bin/activate
+            source venv/bin/activate
             pytest -v --junitxml=test-reports/pytest.xml \
             --cov-config=.coveragerc --cov=agentMET4FOF/ \
             --deselect agentMET4FOF/tests/test_examples.py::TestZEMA_EMC \
