--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,10 +64,10 @@ jobs:
       - run:
           name: Create environment
           command: |
+            conda update -n base -c defaults conda
             if [ -d "/home/circleci/conda/envs/" ]; then
                 conda env update --prune --file environment.yml
             else
-                conda update -n base -c defaults conda
                 conda env create -f environment.yml
             fi
 
@@ -135,6 +135,7 @@ jobs:
           command: |
             python3 -m venv venv
             source venv/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
             pip install pytest
 
@@ -196,6 +197,7 @@ jobs:
           command: |
             python3 -m venv venv
             source venv/bin/activate
+            pip install --upgrade pip
             pip install -r PyDynamic/requirements.txt
             pip install pytest pytest-cov
 
@@ -254,6 +256,7 @@ jobs:
          command: |
            python3 -m venv venv
            source venv/bin/activate
+           pip install --upgrade pip
            pip install -r agentMET4FOF/requirements.txt
            pip install pytest pytest-cov
 
