--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ executors:
   tester:
     docker:
       - image: circleci/python:3.7
+  publisher:
+    docker:
+      - image: circleci/python:3.8
 
 workflows:
   build_and_test_virtual_environments:
@@ -18,6 +21,20 @@ workflows:
     jobs:
       - test_PyDynamic
       - test_agentMET4FOF
+  release:
+    jobs:
+      - semantic-release
+          # Create 'release' job to create a release and publish it on GitHub and
+          # Zenodo.
+          requires:
+            - build_and_test_conda_env
+            - build_and_test_venv_env
+            - test_PyDynamic
+            - test_agentMET4FOF
+          filters:
+            branches:
+              # This assures the job only being triggered on branch master.
+              only: /master/
 
 jobs:
   build_and_test_conda_env:
@@ -284,3 +301,40 @@ jobs:
 
       - store_test_results:
          path: test-reports
+
+  semantic-release:
+    executor: publisher
+
+    working_directory: ~/repo
+
+    steps:
+      # Checkout code
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            # Specify the unique identifier for the cache.
+            - publisher-dependencies
+
+      # Install dependencies.
+      - run:
+          name: Install dependencies
+          command: |
+            python3 -m venv venv
+            source venv/bin/activate
+            pip install --upgrade pip
+            pip install python-semantic-release
+
+      - save_cache:
+          paths:
+            - /home/circleci/conda/envs/
+          key: >-
+            publisher-dependencies
+
+      # Publish it!
+      - run:
+          name: Run semantic-release publish
+          command: |
+            source venv/bin/activate
+            semantic-release publish
