--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -333,4 +333,6 @@ jobs:
           name: Run semantic-release publish
           command: |
             source venv/bin/activate
+            git config --global user.name "semantic-release (via CircleCI)"
+            git config --global user.email "bjoern.ludwig@ptb.de"
             semantic-release publish
