--- a/requirements.txt
+++ b/requirements.txt
@@ -4,102 +4,78 @@
 #
 #    pip-compile
 #
-atomicwrites==1.3.0       # via pytest
-attrs==19.3.0             # via jsonschema, pytest
-backcall==0.1.0           # via ipython
-bleach==3.1.1             # via nbconvert
+attrs==19.3.0             # via -r PyDynamic/requirements/requirements.txt (line 7), pytest
+backcall==0.1.0           # via -r PyDynamic/requirements/requirements.txt (line 8), ipython
 certifi==2019.11.28       # via requests
 chardet==3.0.4            # via requests
 click==7.0                # via flask
 cloudpickle==1.3.0        # via osbrain
-cycler==0.10.0            # via matplotlib
+cycler==0.10.0            # via -r PyDynamic/requirements/requirements.txt (line 9), matplotlib
 dash-core-components==1.8.0  # via dash
 dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt (line 11)
 dash-html-components==1.0.2  # via dash, dash-cytoscape
 dash-table==4.6.0         # via dash
 dash==1.9.0               # via -r agentMET4FOF/requirements.txt (line 10), dash-cytoscape
 dash_renderer==1.2.4      # via dash, dash-cytoscape
-decorator==4.4.1          # via ipython, networkx, traitlets
-defusedxml==0.6.0         # via nbconvert
+decorator==4.4.1          # via -r PyDynamic/requirements/requirements.txt (line 10), ipython, networkx, traitlets
 dill==0.3.1.1             # via multiprocess, osbrain
-entrypoints==0.3          # via nbconvert
 flask-compress==1.4.0     # via dash
 flask==1.1.1              # via dash, flask-compress
 future==0.18.2            # via dash
 h5py==2.10.0              # via -r agentMET4FOF/requirements.txt (line 14)
 idna==2.9                 # via requests
-importlib-metadata==1.5.0  # via jsonschema, pluggy, pytest
-ipykernel==5.1.4          # via -r agentMET4FOF/requirements.txt (line 1), ipywidgets, jupyter, jupyter-console, notebook, qtconsole
-ipython-genutils==0.2.0   # via nbformat, notebook, qtconsole, traitlets
-ipython==7.12.0           # via -r PyDynamic/requirements.txt (line 1), ipykernel, ipywidgets, jupyter-console
-ipywidgets==7.5.1         # via jupyter
+importlib-metadata==1.2.0  # via -r PyDynamic/requirements/requirements.txt (line 11), pluggy, pytest
+ipykernel==5.1.3          # via -r PyDynamic/requirements/requirements.txt (line 12), -r agentMET4FOF/requirements.txt (line 1)
+ipython-genutils==0.2.0   # via -r PyDynamic/requirements/requirements.txt (line 13), traitlets
+ipython==7.10.1           # via -r PyDynamic/requirements/requirements.txt (line 14), ipykernel
 itsdangerous==1.1.0       # via flask
-jedi==0.16.0              # via ipython
-jinja2==2.11.1            # via flask, nbconvert, notebook
+jedi==0.15.1              # via -r PyDynamic/requirements/requirements.txt (line 15), ipython
+jinja2==2.11.1            # via flask
 joblib==0.14.1            # via scikit-learn
-jsonschema==3.2.0         # via nbformat
-jupyter-client==6.0.0     # via ipykernel, jupyter-console, notebook, qtconsole
-jupyter-console==6.1.0    # via jupyter
-jupyter-core==4.6.3       # via jupyter-client, nbconvert, nbformat, notebook, qtconsole
-jupyter==1.0.0            # via -r PyDynamic/requirements.txt (line 2)
-kiwisolver==1.1.0         # via matplotlib
+jupyter-client==5.3.4     # via -r PyDynamic/requirements/requirements.txt (line 16), ipykernel
+jupyter-core==4.6.1       # via -r PyDynamic/requirements/requirements.txt (line 17), jupyter-client
+kiwisolver==1.1.0         # via -r PyDynamic/requirements/requirements.txt (line 18), matplotlib
 markupsafe==1.1.1         # via jinja2
-matplotlib==3.1.0         # via -r PyDynamic/requirements.txt (line 3), -r agentMET4FOF/requirements.txt (line 6), scikit-multiflow, seaborn
-mistune==0.8.4            # via nbconvert
-more-itertools==8.2.0     # via pytest
-mpmath==1.1.0             # via sympy
+matplotlib==3.1.2         # via -r PyDynamic/requirements/requirements.txt (line 19), -r agentMET4FOF/requirements.txt (line 6), scikit-multiflow, seaborn
+more-itertools==8.0.0     # via -r PyDynamic/requirements/requirements.txt (line 20), pytest, zipp
+mpmath==1.1.0             # via -r PyDynamic/requirements/requirements.txt (line 21), sympy
 multiprocess==0.70.9      # via -r agentMET4FOF/requirements.txt (line 13)
-nbconvert==5.6.1          # via jupyter, notebook
-nbformat==5.0.4           # via ipywidgets, nbconvert, notebook
 networkx==2.4             # via -r agentMET4FOF/requirements.txt (line 12)
-notebook==6.0.3           # via jupyter, widgetsnbextension
-numpy==1.18.1             # via -r PyDynamic/requirements.txt (line 5), -r agentMET4FOF/requirements.txt (line 2), h5py, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, seaborn, torchvision
+numpy==1.17.4             # via -r PyDynamic/requirements/requirements.txt (line 22), -r agentMET4FOF/requirements.txt (line 2), h5py, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, seaborn
 osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt (line 9)
-packaging==20.1           # via pytest
-pandas==1.0.1             # via -r PyDynamic/requirements.txt (line 6), -r agentMET4FOF/requirements.txt (line 7), scikit-multiflow, seaborn
-pandocfilters==1.4.2      # via nbconvert
-parso==0.6.1              # via jedi
-pexpect==4.8.0            # via ipython
-pickleshare==0.7.5        # via ipython
-pillow==7.0.0             # via torchvision
+packaging==19.2           # via -r PyDynamic/requirements/requirements.txt (line 23), pytest
+pandas==0.25.3            # via -r PyDynamic/requirements/requirements.txt (line 24), -r agentMET4FOF/requirements.txt (line 7), scikit-multiflow, seaborn
+parso==0.5.1              # via -r PyDynamic/requirements/requirements.txt (line 25), jedi
+pexpect==4.7.0            # via -r PyDynamic/requirements/requirements.txt (line 26), ipython
+pickleshare==0.7.5        # via -r PyDynamic/requirements/requirements.txt (line 27), ipython
 plotly==4.5.2             # via -r agentMET4FOF/requirements.txt (line 16), dash
-pluggy==0.13.1            # via pytest
-prometheus-client==0.7.1  # via notebook
-prompt-toolkit==3.0.3     # via ipython, jupyter-console
-ptyprocess==0.6.0         # via pexpect, terminado
-py==1.8.1                 # via pytest
-pygments==2.5.2           # via ipython, jupyter-console, nbconvert, qtconsole
-pyparsing==2.4.6          # via matplotlib, packaging
+pluggy==0.13.1            # via -r PyDynamic/requirements/requirements.txt (line 28), pytest
+prompt-toolkit==3.0.2     # via -r PyDynamic/requirements/requirements.txt (line 29), ipython
+ptyprocess==0.6.0         # via -r PyDynamic/requirements/requirements.txt (line 30), pexpect
+py==1.8.0                 # via -r PyDynamic/requirements/requirements.txt (line 31), pytest
+pygments==2.5.2           # via -r PyDynamic/requirements/requirements.txt (line 32), ipython
+pyparsing==2.4.5          # via -r PyDynamic/requirements/requirements.txt (line 33), matplotlib, packaging
 pyro4==4.79               # via osbrain
-pyrsistent==0.15.7        # via jsonschema
-pytest==5.0.1             # via -r PyDynamic/requirements.txt (line 4)
-python-dateutil==2.8.1    # via jupyter-client, matplotlib, pandas
-pytz==2019.3              # via pandas
-pyzmq==19.0.0             # via jupyter-client, notebook, osbrain
-qtconsole==4.6.0          # via jupyter
+pytest==5.3.1             # via -r PyDynamic/requirements/requirements.txt (line 34)
+python-dateutil==2.8.1    # via -r PyDynamic/requirements/requirements.txt (line 35), jupyter-client, matplotlib, pandas
+pytz==2019.3              # via -r PyDynamic/requirements/requirements.txt (line 36), pandas
+pyzmq==18.1.1             # via -r PyDynamic/requirements/requirements.txt (line 37), jupyter-client, osbrain
 requests==2.23.0          # via -r agentMET4FOF/requirements.txt (line 15)
 retrying==1.3.3           # via plotly
 scikit-learn==0.22.1      # via -r agentMET4FOF/requirements.txt (line 3), scikit-multiflow
 scikit-multiflow==0.4.1   # via -r agentMET4FOF/requirements.txt (line 4)
-scipy==1.4.1              # via -r PyDynamic/requirements.txt (line 7), -r agentMET4FOF/requirements.txt (line 5), scikit-learn, scikit-multiflow, seaborn
+scipy==1.3.3              # via -r PyDynamic/requirements/requirements.txt (line 38), -r agentMET4FOF/requirements.txt (line 5), scikit-learn, scikit-multiflow, seaborn
 seaborn==0.10.0           # via -r agentMET4FOF/requirements.txt (line 8)
-send2trash==1.5.0         # via notebook
 serpent==1.30.2           # via pyro4
-six==1.14.0               # via bleach, cycler, h5py, jsonschema, packaging, plotly, python-dateutil, retrying, torchvision, traitlets
+six==1.13.0               # via -r PyDynamic/requirements/requirements.txt (line 39), cycler, h5py, packaging, plotly, python-dateutil, retrying, traitlets
 sortedcontainers==2.1.0   # via scikit-multiflow
-sympy==1.4                # via -r PyDynamic/requirements.txt (line 8)
-terminado==0.8.3          # via notebook
-testpath==0.4.4           # via nbconvert
-torch==1.4.0              # via -r agentMET4FOF/requirements.txt (line 17), torchvision
-torchvision==0.5.0        # via -r agentMET4FOF/requirements.txt (line 18)
-tornado==6.0.3            # via ipykernel, jupyter-client, notebook, terminado
-traitlets==4.3.3          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbconvert, nbformat, notebook, qtconsole
+sympy==1.4                # via -r PyDynamic/requirements/requirements.txt (line 40)
+tornado==6.0.3            # via -r PyDynamic/requirements/requirements.txt (line 41), ipykernel, jupyter-client
+traitlets==4.3.3          # via -r PyDynamic/requirements/requirements.txt (line 42), ipykernel, ipython, jupyter-client, jupyter-core
 urllib3==1.25.8           # via requests
-wcwidth==0.1.8            # via prompt-toolkit, pytest
-webencodings==0.5.1       # via bleach
+wcwidth==0.1.7            # via -r PyDynamic/requirements/requirements.txt (line 43), prompt-toolkit, pytest
 werkzeug==1.0.0           # via flask
-widgetsnbextension==3.5.1  # via ipywidgets
-zipp==3.0.0               # via importlib-metadata
+zipp==0.6.0               # via -r PyDynamic/requirements/requirements.txt (line 44), importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
