--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 version_variable=VERSION:__version__
 version_source=commit
 upload_to_pypi=false
+upload_to_release=false
 branch=master
 hvcs=github
 commit_version_number=true
