--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@
 #
 #    pip-compile
 #
+attrs==19.3.0             # via hypothesis, pytest
 backcall==0.1.0           # via -r pydynamic-requirements.txt, ipython
 brotli==1.0.7             # via flask-compress
 click==7.1.2              # via flask
 cloudpickle==1.4.1        # via osbrain
+coverage==5.1             # via pytest-cov
 cycler==0.10.0            # via -r pydynamic-requirements.txt, matplotlib
 dash-core-components==1.9.1  # via dash
 dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt
@@ -20,6 +22,8 @@ dill==0.3.1.1             # via multiprocess, osbrain
 flask-compress==1.5.0     # via dash
 flask==1.1.2              # via dash, flask-compress
 future==0.18.2            # via dash, torch
+hypothesis==5.10.4        # via -r dev-requirements-py37.in
+importlib-metadata==1.6.0  # via pluggy, pytest
 ipykernel==5.2.1          # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt
 ipython-genutils==0.2.0   # via -r pydynamic-requirements.txt, traitlets
 ipython==7.13.0           # via -r pydynamic-requirements.txt, ipykernel
@@ -32,22 +36,28 @@ jupyter-core==4.6.3       # via -r pydynamic-requirements.txt, jupyter-client
 kiwisolver==1.2.0         # via -r pydynamic-requirements.txt, matplotlib
 markupsafe==1.1.1         # via jinja2
 matplotlib==3.1.0         # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, scikit-multiflow
+more-itertools==8.2.0     # via pytest
 mpmath==1.1.0             # via -r pydynamic-requirements.txt, sympy
 multiprocess==0.70.9      # via -r agentMET4FOF/requirements.txt
 networkx==2.4             # via -r agentMET4FOF/requirements.txt
 numpy==1.18.3             # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, torch, torchvision
 osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt
+packaging==20.3           # via pytest
 pandas==1.0.3             # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, scikit-multiflow
 parso==0.7.0              # via -r pydynamic-requirements.txt, jedi
 pexpect==4.8.0            # via -r pydynamic-requirements.txt, ipython
 pickleshare==0.7.5        # via -r pydynamic-requirements.txt, ipython
 pillow==7.1.2             # via torchvision
 plotly==4.6.0             # via -r agentMET4FOF/requirements.txt, dash
+pluggy==0.13.1            # via pytest
 prompt-toolkit==3.0.5     # via -r pydynamic-requirements.txt, ipython
+py==1.8.1                 # via pytest
 ptyprocess==0.6.0         # via -r pydynamic-requirements.txt, pexpect
 pygments==2.6.1           # via -r pydynamic-requirements.txt, ipython
-pyparsing==2.4.7          # via -r pydynamic-requirements.txt, matplotlib
+pyparsing==2.4.7          # via -r pydynamic-requirements.txt, matplotlib, packaging
 pyro4==4.80               # via osbrain
+pytest-cov==2.8.1         # via -r dev-requirements-py37.in
+pytest==5.4.1             # via -r dev-requirements-py37.in, pytest-cov
 python-dateutil==2.8.1    # via -r pydynamic-requirements.txt, jupyter-client, matplotlib, pandas
 pytz==2020.1              # via -r pydynamic-requirements.txt, pandas
 pyzmq==19.0.0             # via -r pydynamic-requirements.txt, jupyter-client, osbrain
@@ -56,15 +66,16 @@ scikit-learn==0.22.2.post1  # via -r agentMET4FOF/requirements.txt, scikit-multi
 scikit-multiflow==0.4.1   # via -r agentMET4FOF/requirements.txt
 scipy==1.4.1              # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, scikit-learn, scikit-multiflow
 serpent==1.30.2           # via pyro4
-six==1.14.0               # via -r pydynamic-requirements.txt, cycler, plotly, python-dateutil, retrying, traitlets
-sortedcontainers==2.1.0   # via scikit-multiflow
+six==1.14.0               # via -r pydynamic-requirements.txt, cycler, packaging, plotly, python-dateutil, retrying, traitlets
+sortedcontainers==2.1.0   # via hypothesis, scikit-multiflow
 sympy==1.5.1              # via -r pydynamic-requirements.txt
 torch==1.5.0              # via -r agentMET4FOF/requirements.txt, torchvision
 torchvision==0.6.0        # via -r agentMET4FOF/requirements.txt
 tornado==6.0.4            # via -r pydynamic-requirements.txt, ipykernel, jupyter-client
 traitlets==4.3.3          # via -r pydynamic-requirements.txt, ipykernel, ipython, jupyter-client, jupyter-core
-wcwidth==0.1.9            # via -r pydynamic-requirements.txt, prompt-toolkit
+wcwidth==0.1.9            # via -r pydynamic-requirements.txt, prompt-toolkit, pytest
 werkzeug==1.0.1           # via flask
+zipp==3.1.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
