--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "agentMET4FOF_bayesian_neural_network_ZeMA"]
 	path = agentMET4FOF_bayesian_neural_network_ZeMA
 	url = https://github.com/Met4FoF/agentMET4FOF_bayesian_neural_network_ZeMA
+[submodule "agentMET4FOF_ZeMA_emc"]
+	path = agentMET4FOF_ZeMA_emc
+	url = https://github.com/Met4FoF/agentMET4FOF_ZeMA_emc.git
