--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 version_variable=VERSION:__version__
 version_source=commit
 upload_to_pypi=false
-upload_to_release=false
+upload_to_release=true
 branch=master
 hvcs=github
 commit_version_number=true
+changelog_components=semantic_release.changelog.changelog_headers(),
+    semantic_release.changelog.compare_url()
