--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,8 +45,8 @@ jobs:
       - run:
           name: Initialize submodules
           command: |
-            git submodule foreach \
-            'git submodule sync && git submodule update --init --recursive'
+            git submodule sync
+            git submodule update --init --recursive
 
       # Create folder for test results.
       - run:
@@ -119,8 +119,8 @@ jobs:
       - run:
           name: Initialize submodules
           command: |
-            git submodule foreach \
-            'git submodule sync && git submodule update --init --recursive'
+            git submodule sync
+            git submodule update --init --recursive
 
       # Create folder for test results.
       - run:
