--- a/requirements.txt
+++ b/requirements.txt
@@ -4,78 +4,112 @@
 #
 #    pip-compile
 #
+agentmet4fof==0.1.8       # via -r agentMET4FOF_ZeMA_emc/requirements.in
+appdirs==1.4.4            # via virtualenv
 attrs==19.3.0             # via hypothesis, pytest
-backcall==0.1.0           # via -r pydynamic-requirements.txt, ipython
+backcall==0.1.0           # via -r PyDynamic/requirements/requirements-py37.txt, ipython
+bleach==3.1.5             # via readme-renderer
 brotli==1.0.7             # via flask-compress
-click==7.1.2              # via flask
+certifi==2020.4.5.2       # via requests
+cffi==1.14.0              # via cryptography
+chardet==3.0.4            # via requests
+click-log==0.3.2          # via python-semantic-release
+click==7.1.2              # via click-log, flask, python-semantic-release
 cloudpickle==1.4.1        # via osbrain
 coverage==5.1             # via pytest-cov
-cycler==0.10.0            # via -r pydynamic-requirements.txt, matplotlib
-dash-core-components==1.9.1  # via dash
-dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt
+cryptography==2.9.2       # via secretstorage
+cycler==0.10.0            # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib
+dash-core-components==1.10.0  # via dash
+dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt, agentmet4fof
 dash-html-components==1.0.3  # via dash, dash-cytoscape
-dash-table==4.6.2         # via dash
-dash==1.11.0              # via -r agentMET4FOF/requirements.txt, dash-cytoscape
-dash_renderer==1.4.0      # via dash, dash-cytoscape
-decorator==4.4.2          # via -r pydynamic-requirements.txt, ipython, networkx, traitlets
-dill==0.3.1.1             # via multiprocess, osbrain
+dash-table==4.7.0         # via dash
+dash==1.12.0              # via -r agentMET4FOF/requirements.txt, agentmet4fof, dash-cytoscape
+dash_renderer==1.4.1      # via dash, dash-cytoscape
+decorator==4.4.1          # via -r PyDynamic/requirements/requirements-py37.txt, ipython, networkx, traitlets
+dill==0.3.1.1             # via osbrain
+distlib==0.3.0            # via virtualenv
+docutils==0.16            # via readme-renderer
+filelock==3.0.12          # via tox, virtualenv
 flask-compress==1.5.0     # via dash
 flask==1.1.2              # via dash, flask-compress
 future==0.18.2            # via dash, torch
-hypothesis==5.10.4        # via -r dev-requirements-py37.in
-importlib-metadata==1.6.0  # via pluggy, pytest
-ipykernel==5.2.1          # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt
-ipython-genutils==0.2.0   # via -r pydynamic-requirements.txt, traitlets
-ipython==7.13.0           # via -r pydynamic-requirements.txt, ipykernel
+gitdb==4.0.5              # via gitpython
+gitpython==3.1.3          # via python-semantic-release
+h5py==2.10.0              # via -r agentMET4FOF_ZeMA_emc/requirements.in
+hypothesis==5.16.0        # via -r PyDynamic/requirements/dev-requirements.in
+idna==2.9                 # via requests
+invoke==1.4.1             # via python-semantic-release
+ipykernel==5.1.3          # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt
+ipython-genutils==0.2.0   # via -r PyDynamic/requirements/requirements-py37.txt, traitlets
+ipython==7.10.1           # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel
 itsdangerous==1.1.0       # via flask
-jedi==0.17.0              # via -r pydynamic-requirements.txt, ipython
+jedi==0.15.1              # via -r PyDynamic/requirements/requirements-py37.txt, ipython
+jeepney==0.4.3            # via keyring, secretstorage
 jinja2==2.11.2            # via flask
-joblib==0.14.1            # via scikit-learn
-jupyter-client==6.1.3     # via -r pydynamic-requirements.txt, ipykernel
-jupyter-core==4.6.3       # via -r pydynamic-requirements.txt, jupyter-client
-kiwisolver==1.2.0         # via -r pydynamic-requirements.txt, matplotlib
+joblib==0.15.1            # via scikit-learn
+jupyter-client==5.3.4     # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel
+jupyter-core==4.6.1       # via -r PyDynamic/requirements/requirements-py37.txt, jupyter-client
+keyring==21.2.1           # via twine
+kiwisolver==1.1.0         # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib
 markupsafe==1.1.1         # via jinja2
-matplotlib==3.1.0         # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, scikit-multiflow
-more-itertools==8.2.0     # via pytest
-mpmath==1.1.0             # via -r pydynamic-requirements.txt, sympy
-multiprocess==0.70.9      # via -r agentMET4FOF/requirements.txt
-networkx==2.4             # via -r agentMET4FOF/requirements.txt
-numpy==1.18.3             # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, torch, torchvision
-osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt
-packaging==20.3           # via pytest
-pandas==1.0.3             # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, scikit-multiflow
-parso==0.7.0              # via -r pydynamic-requirements.txt, jedi
-pexpect==4.8.0            # via -r pydynamic-requirements.txt, ipython
-pickleshare==0.7.5        # via -r pydynamic-requirements.txt, ipython
+matplotlib==3.1.2         # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, scikit-multiflow
+more-itertools==8.3.0     # via pytest
+mpmath==1.1.0             # via -r PyDynamic/requirements/requirements-py37.txt, sympy
+networkx==2.4             # via -r agentMET4FOF/requirements.txt, agentmet4fof
+numpy==1.17.4             # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, h5py, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, torch, torchvision
+osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt, agentmet4fof
+packaging==20.4           # via bleach, pytest, tox
+pandas==0.25.3            # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, scikit-multiflow
+parso==0.5.1              # via -r PyDynamic/requirements/requirements-py37.txt, jedi
+pexpect==4.7.0            # via -r PyDynamic/requirements/requirements-py37.txt, ipython
+pickleshare==0.7.5        # via -r PyDynamic/requirements/requirements-py37.txt, ipython
 pillow==7.1.2             # via torchvision
-plotly==4.6.0             # via -r agentMET4FOF/requirements.txt, dash
-pluggy==0.13.1            # via pytest
-prompt-toolkit==3.0.5     # via -r pydynamic-requirements.txt, ipython
-py==1.8.1                 # via pytest
-ptyprocess==0.6.0         # via -r pydynamic-requirements.txt, pexpect
-pygments==2.6.1           # via -r pydynamic-requirements.txt, ipython
-pyparsing==2.4.7          # via -r pydynamic-requirements.txt, matplotlib, packaging
+pkginfo==1.5.0.1          # via twine
+plotly==4.8.1             # via -r agentMET4FOF/requirements.txt, agentmet4fof, dash
+pluggy==0.13.1            # via pytest, tox
+prompt-toolkit==3.0.2     # via -r PyDynamic/requirements/requirements-py37.txt, ipython
+ptyprocess==0.6.0         # via -r PyDynamic/requirements/requirements-py37.txt, pexpect
+py==1.8.1                 # via pytest, tox
+pycparser==2.20           # via cffi
+pygments==2.5.2           # via -r PyDynamic/requirements/requirements-py37.txt, ipython, readme-renderer
+pyparsing==2.4.5          # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib, packaging
 pyro4==4.80               # via osbrain
-pytest-cov==2.8.1         # via -r dev-requirements-py37.in
-pytest==5.4.1             # via -r dev-requirements-py37.in, pytest-cov
-python-dateutil==2.8.1    # via -r pydynamic-requirements.txt, jupyter-client, matplotlib, pandas
-pytz==2020.1              # via -r pydynamic-requirements.txt, pandas
-pyzmq==19.0.0             # via -r pydynamic-requirements.txt, jupyter-client, osbrain
+pytest-cov==2.9.0         # via -r PyDynamic/requirements/dev-requirements.in
+pytest==5.4.3             # via -r PyDynamic/requirements/dev-requirements.in, pytest-cov
+python-dateutil==2.8.1    # via -r PyDynamic/requirements/requirements-py37.txt, jupyter-client, matplotlib, pandas
+python-gitlab==1.15.0     # via python-semantic-release
+python-semantic-release==7.1.1  # via -r PyDynamic/requirements/dev-requirements.in
+pytz==2019.3              # via -r PyDynamic/requirements/requirements-py37.txt, pandas
+pyzmq==18.1.1             # via -r PyDynamic/requirements/requirements-py37.txt, jupyter-client, osbrain
+readme-renderer==26.0     # via twine
+requests-toolbelt==0.9.1  # via twine
+requests==2.23.0          # via python-gitlab, python-semantic-release, requests-toolbelt, twine
 retrying==1.3.3           # via plotly
-scikit-learn==0.22.2.post1  # via -r agentMET4FOF/requirements.txt, scikit-multiflow
+scikit-learn==0.23.1      # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, scikit-multiflow
 scikit-multiflow==0.4.1   # via -r agentMET4FOF/requirements.txt
-scipy==1.4.1              # via -r agentMET4FOF/requirements.txt, -r pydynamic-requirements.txt, scikit-learn, scikit-multiflow
+scipy==1.3.3              # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, scikit-learn, scikit-multiflow
+secretstorage==3.1.2      # via keyring
+semver==2.10.1            # via python-semantic-release
 serpent==1.30.2           # via pyro4
-six==1.14.0               # via -r pydynamic-requirements.txt, cycler, packaging, plotly, python-dateutil, retrying, traitlets
-sortedcontainers==2.1.0   # via hypothesis, scikit-multiflow
-sympy==1.5.1              # via -r pydynamic-requirements.txt
+six==1.13.0               # via -r PyDynamic/requirements/requirements-py37.txt, bleach, cryptography, cycler, h5py, packaging, plotly, python-dateutil, python-gitlab, readme-renderer, retrying, tox, traitlets, virtualenv
+smmap==3.0.4              # via gitdb
+sortedcontainers==2.2.2   # via hypothesis, scikit-multiflow
+sympy==1.4                # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in
+threadpoolctl==2.1.0      # via scikit-learn
+toml==0.10.0              # via python-semantic-release, tox
 torch==1.5.0              # via -r agentMET4FOF/requirements.txt, torchvision
 torchvision==0.6.0        # via -r agentMET4FOF/requirements.txt
-tornado==6.0.4            # via -r pydynamic-requirements.txt, ipykernel, jupyter-client
-traitlets==4.3.3          # via -r pydynamic-requirements.txt, ipykernel, ipython, jupyter-client, jupyter-core
-wcwidth==0.1.9            # via -r pydynamic-requirements.txt, prompt-toolkit, pytest
+tornado==6.0.3            # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel, jupyter-client
+tox==3.14.3               # via -r PyDynamic/requirements/dev-requirements.in
+tqdm==4.46.1              # via twine
+traitlets==4.3.3          # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel, ipython, jupyter-client, jupyter-core
+twine==3.1.1              # via python-semantic-release
+urllib3==1.25.9           # via requests
+virtualenv==20.0.21       # via tox
+wcwidth==0.1.7            # via -r PyDynamic/requirements/requirements-py37.txt, prompt-toolkit, pytest
+webencodings==0.5.1       # via bleach
 werkzeug==1.0.1           # via flask
-zipp==3.1.0               # via importlib-metadata
+wheel==0.34.2             # via python-semantic-release
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
