--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,10 @@ coverage==5.1             # via pytest-cov
 cryptography==2.9.2       # via secretstorage
 cycler==0.10.0            # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib
 dash-core-components==1.10.0  # via dash
-dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt, agentmet4fof
+dash-cytoscape==0.1.1     # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof
 dash-html-components==1.0.3  # via dash, dash-cytoscape
 dash-table==4.7.0         # via dash
-dash==1.12.0              # via -r agentMET4FOF/requirements.txt, agentmet4fof, dash-cytoscape
+dash==1.12.0              # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof, dash-cytoscape
 dash_renderer==1.4.1      # via dash, dash-cytoscape
 decorator==4.4.1          # via -r PyDynamic/requirements/requirements-py37.txt, ipython, networkx, traitlets
 dill==0.3.1.1             # via osbrain
@@ -39,7 +39,7 @@ h5py==2.10.0              # via -r agentMET4FOF_ZeMA_emc/requirements.in
 hypothesis==5.16.0        # via -r PyDynamic/requirements/dev-requirements.in
 idna==2.9                 # via requests
 invoke==1.4.1             # via python-semantic-release
-ipykernel==5.1.3          # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt
+ipykernel==5.1.3          # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt
 ipython-genutils==0.2.0   # via -r PyDynamic/requirements/requirements-py37.txt, traitlets
 ipython==7.10.1           # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel
 itsdangerous==1.1.0       # via flask
@@ -52,20 +52,20 @@ jupyter-core==4.6.1       # via -r PyDynamic/requirements/requirements-py37.txt,
 keyring==21.2.1           # via twine
 kiwisolver==1.1.0         # via -r PyDynamic/requirements/requirements-py37.txt, matplotlib
 markupsafe==1.1.1         # via jinja2
-matplotlib==3.1.2         # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, scikit-multiflow
+matplotlib==3.1.2         # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof, scikit-multiflow
 more-itertools==8.3.0     # via pytest
 mpmath==1.1.0             # via -r PyDynamic/requirements/requirements-py37.txt, sympy
-networkx==2.4             # via -r agentMET4FOF/requirements.txt, agentmet4fof
-numpy==1.17.4             # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, h5py, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, torch, torchvision
-osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt, agentmet4fof
+networkx==2.4             # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof
+numpy==1.17.4             # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, agentmet4fof, h5py, matplotlib, pandas, scikit-learn, scikit-multiflow, scipy, torch, torchvision
+osbrain==0.6.5            # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof
 packaging==20.4           # via bleach, pytest, tox
-pandas==0.25.3            # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, scikit-multiflow
+pandas==0.25.3            # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, agentmet4fof, scikit-multiflow
 parso==0.5.1              # via -r PyDynamic/requirements/requirements-py37.txt, jedi
 pexpect==4.7.0            # via -r PyDynamic/requirements/requirements-py37.txt, ipython
 pickleshare==0.7.5        # via -r PyDynamic/requirements/requirements-py37.txt, ipython
 pillow==7.1.2             # via torchvision
 pkginfo==1.5.0.1          # via twine
-plotly==4.8.1             # via -r agentMET4FOF/requirements.txt, agentmet4fof, dash
+plotly==4.8.1             # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, agentmet4fof, dash
 pluggy==0.13.1            # via pytest, tox
 prompt-toolkit==3.0.2     # via -r PyDynamic/requirements/requirements-py37.txt, ipython
 ptyprocess==0.6.0         # via -r PyDynamic/requirements/requirements-py37.txt, pexpect
@@ -85,9 +85,9 @@ readme-renderer==26.0     # via twine
 requests-toolbelt==0.9.1  # via twine
 requests==2.23.0          # via python-gitlab, python-semantic-release, requests-toolbelt, twine
 retrying==1.3.3           # via plotly
-scikit-learn==0.23.1      # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, agentmet4fof, scikit-multiflow
-scikit-multiflow==0.4.1   # via -r agentMET4FOF/requirements.txt
-scipy==1.3.3              # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, scikit-learn, scikit-multiflow
+scikit-learn==0.23.1      # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, agentmet4fof, scikit-multiflow
+scikit-multiflow==0.4.1   # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt
+scipy==1.3.3              # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in, -r agentMET4FOF/requirements.txt, -r agentMET4FOF_ZeMA_emc/requirements.in, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, scikit-learn, scikit-multiflow
 secretstorage==3.1.2      # via keyring
 semver==2.10.1            # via python-semantic-release
 serpent==1.30.2           # via pyro4
@@ -97,8 +97,8 @@ sortedcontainers==2.2.2   # via hypothesis, scikit-multiflow
 sympy==1.4                # via -r PyDynamic/requirements/requirements-py37.txt, -r PyDynamic/requirements/requirements.in
 threadpoolctl==2.1.0      # via scikit-learn
 toml==0.10.0              # via python-semantic-release, tox
-torch==1.5.0              # via -r agentMET4FOF/requirements.txt, torchvision
-torchvision==0.6.0        # via -r agentMET4FOF/requirements.txt
+torch==1.5.0              # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/requirements.in, torchvision
+torchvision==0.6.0        # via -r agentMET4FOF/requirements.txt, -r agentMET4FOF_anomaly_detection/agentMET4FOF/requirements.txt
 tornado==6.0.3            # via -r PyDynamic/requirements/requirements-py37.txt, ipykernel, jupyter-client
 tox==3.14.3               # via -r PyDynamic/requirements/dev-requirements.in
 tqdm==4.46.1              # via twine
